Ollama loacla server 명시

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - DB_NAME=postgres
       - DB_USER=postgres
       - DB_PASSWORD=postgres
+      - OLLAMA_BASE_URL=http://localhost:11434
     depends_on:
       - pgvector-db
 
